web-app/css/sudoku.css
body {
    width: 100%;
    font-family: Helvetica, serif;
    background-color: #ffebcd;
    margin: 0;
    padding: 0;
}

#solvedCellReport ul, #cellNotes ul {
    background-color: #e6d4b9;
    padding: 20px;
    margin: 20px;
    -moz-border-radius-bottomright: 12px;
    border-bottom-right-radius: 12px;
    -moz-border-radius-topright: 12px;
    border-top-right-radius: 12px;
}

#mainContainer {
    width: 1000px;
    margin: auto;
}

table {
    width: 100%;
    height: 70%;
    border-collapse: collapse;
}

#boardContainer > table {
    width: 500px;
    height: 500px;
}

tr {
    border: 0 solid gray;
    border-bottom-width: 1px;
}

.row_divider {
    border-bottom-color: black;
    border-bottom-width: 2px;
}

.cell_divider {
    /*border-right-color:black;*/
    border-right-width: 2px
}

.original_cell {
    color: #f7e517;
}

.last_one_solved {
    color: #f50938;
}

.light {
    background-color: #3856f5;
}

.dark {
    background-color: #2b2bcd;
}

td {
    width: 10%;
    height: 10%;
    border: 1px solid black;
    /*border-bottom-width: 0;*/
    text-align: center;
    color: #f5f5f5;
    font-size: 22px;
    font-weight: bold;
}

.notes, .visible_notes, .hide_notes, .select_notes_light, .select_notes_dark {
    margin-left: 0;
    margin-right: 0;
    width: 100%;
    height: 100%;
}

.hide_notes {
    display: none;
}

.note_row {
    border: 0 none;
}

.note_cell, .select_note_cell {
    font-size: 12px;
    border: 0 none;
    width: 33%;
    height: 33%;
}

.select_note_cell {
    cursor: pointer;
    padding: 5px;
}

.select_notes_light td {
    color: #3856f5;
}

.select_notes_dark td {
    color: #2b2bcd;
}

.select_notes td {
    color: white;
}

[class="select_note_cell"]:hover {
    font-size: larger;
    padding: 0;
    color: #ffff00;
}

#boardContainer {
    float: left;
    width: 50%;
    margin-top: 30px;
}

#board > td {
    height: 58px;
    width: 58px;
}

#newBoard {
    width: 860px;
    height: 680px;
    margin: auto;
}

.chooseNewBoard {
    margin-top: 25px;
}

.newBoardCell {
    width: 92px;
    height: 72px;
}

.report {
    margin-left: 40px;
    margin-right: 20px;
    margin-top: 30px;
}

.reports {
    float: right;
    width: 50%;
}

.report li {
    list-style: none;
    margin-bottom: 15px;
}

.report p {
    font-weight: bold;
    margin-left: 20px;
}

.parp {
    background-color: #f04c3b;
}

a {
    margin: 20px;
    padding: 15px;
    background-color: #cd2323;
    color: white;
    font-weight: bold;
    text-decoration: none;
    /*text-shadow: 0 1px 1px rgba(0, 0, 0, .3);*/
/**/
    /*-moz-border-radius: 8px;*/
    /*border-radius: 8px;*/
    /*background: -webkit-gradient(linear, left top, left bottom, from(#f04c3b), to(#cd2323));*/
    /*background: -moz-linear-gradient(top, #f04c3b, #cd2323);*/
    /*background: -ms-linear-gradient(top, #f04c3b, #cd2323);*/
    /*-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);*/
    /*-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);*/
    /*box-shadow: 0 1px 2px rgba(0, 0, 0, .2);*/
}

.btn {
  cursor: pointer;
  display: inline-block;
  background-color: #e6e6e6;
  background-repeat: no-repeat;
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(25%, #ffffff), to(#e6e6e6));
  background-image: -webkit-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
  background-image: -moz-linear-gradient(top, #ffffff, #ffffff 25%, #e6e6e6);
  background-image: -ms-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
  background-image: -o-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
  background-image: linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  color: #333;
  line-height: normal;
  border: 1px solid #ccc;
  border-bottom-color: #bbb;
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-transition: 0.1s linear all;
  -moz-transition: 0.1s linear all;
  -ms-transition: 0.1s linear all;
  -o-transition: 0.1s linear all;
  transition: 0.1s linear all;
font-size: 15px;
  line-height: normal;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
}

.btn:hover {
  background-position: 0 -15px;
  color: #333;
  text-decoration: none;
}
.btn:focus {
  outline: 1px dotted #666;
}

.btn.primary {
  color: #ffffff;
  background-color: #0064cd;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
  background-image: -moz-linear-gradient(top, #049cdb, #0064cd);
  background-image: -ms-linear-gradient(top, #049cdb, #0064cd);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cdb), color-stop(100%, #0064cd));
  background-image: -webkit-linear-gradient(top, #049cdb, #0064cd);
  background-image: -o-linear-gradient(top, #049cdb, #0064cd);
  background-image: linear-gradient(top, #049cdb, #0064cd);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#049cdb', endColorstr='#0064cd', GradientType=0);
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  border-color: #0064cd #0064cd #003f81;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
}

a:hover {
    cursor: pointer;
}

.notes_link {
    float: left;
    margin-top: 15px;
}

.notes_link p {
    margin-top: 20px;
    padding: 3px;
}

td.light_with_notes:hover, td.dark_with_notes:hover {
    cursor: pointer;
        /* fallback, somewhere in between light and dark */
        background-color: #332ed6;
        /* Firefox 3.6+ */
}

td.dark_with_notes:hover {

    background: -ms-radial-gradient(circle, #3856f5, #2b2bcd);
    background: -moz-radial-gradient(circle, #3856f5, #2b2bcd);
    /* Safari 4-5, Chrome 1-9 */
    background: -webkit-gradient(radial, center center, 0, center center, 50, from(#3856f5), to(#2b2bcd));
    /* Safari 5.1+, Chrome 10+ */
    background: -webkit-radial-gradient(circle, #3856f5, #2b2bcd);
    /* Opera cannot do radial gradients yet */
}

td.light_with_notes:hover {
    background: -moz-radial-gradient(circle, #2b2bcd, #3856f5);
    background: -ms-radial-gradient(circle, #2b2bcd, #3856f5);
    /* Safari 4-5, Chrome 1-9 */
    background: -webkit-gradient(radial, center center, 0, center center, 50, from(#2b2bcd), to(#3856f5));
    /* Safari 5.1+, Chrome 10+ */
    background: -webkit-radial-gradient(circle, #2b2bcd, #3856f5);
    /* Opera cannot do radial gradients yet */
}

.pointer {
    cursor: pointer;
}

.navigation {
    width: 100%;
    background-color: black;
}

.navigation a {
    font-weight: normal;
    text-shadow: 0 1px 1px rgba(0, 0, 0, .3);

    -moz-border-radius: none;
    border-radius: 0;
    background: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}

.navigation ul {
    height: 40px;
    margin: 0;
}
.navigation li {
    display: inline;
    float: left;
    padding-top: 10px;
}

.exception {
    margin: 20;
    color: red;
}

h1 {
    font-size: 100px;
    font-weight: bold;
    letter-spacing: -6px;
}

h2 {
    font-size: 30px;
    font-weight: bold;
    letter-spacing: -1px;
}

h3 {
    font-size: 24px;
    font-weight: normal;
}

